# rg_projekat25

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  PROJECT-DESCRIPTION-TEMPLATE.md  README.md  check.py  clion-code-style.xml  setup.sh
app/: CMakeLists.txt  config.json
app/include/: MainController.h  MyApp.hpp
app/resources/models/police_station/: model.mtl
app/resources/shaders/: basic.glsl
app/src/: Main.cpp  MainController.cpp  MyApp.cpp
cmake/: find_python.cmake  functions.cmake
engine/: CMakeLists.txt
engine/include/engine/core/: App.hpp  Controller.hpp
engine/include/engine/graphics/: Camera.hpp  GraphicsController.hpp  OpenGL.hpp
engine/include/engine/platform/: Input.hpp  PlatformController.hpp  PlatformEventObserver.hpp  Window.hpp
engine/include/engine/resources/: Mesh.hpp  Model.hpp  ResourcesController.hpp  Shader.hpp  ShaderCompiler.hpp  Skybox.hpp  Texture.hpp
engine/include/engine/util/: ArgParser.hpp  Configuration.hpp  Errors.hpp  Utils.hpp
engine/libs/glm/: CMakeLists.txt
engine/libs/imgui/: CMakeLists.txt
engine/src/: App.cpp  Camera.cpp  Errors.cpp  GraphicsController.cpp  Mesh.cpp  Model.cpp  OpenGL.cpp  PlatformController.cpp  ResourcesController.cpp  Shader.cpp  ShaderCompiler.cpp  Texture.cpp  Utils.cpp
engine/test/app/: CMakeLists.txt  TUTORIAL.md
engine/test/app/include/app/: GUIController.hpp  MainController.hpp  TestApp.hpp
engine/test/app/src/: GUIController.cpp  MainController.cpp  TestApp.cpp
